--- a/EsterPark.ipynb
+++ b/EsterPark.ipynb
@@ -16,6 +16,14 @@
     "get_ipython().magic('matplotlib inline')\n",
     "fname = 'vgsales.csv'\n",
     "x1 = pd.read_csv(fname)\n",
+    "\"\"\"\n",
+    "tried my best to use all style asserts like docstrings and parameter descriptions. \n",
+    "used concepts covered in class for parsing the dataframes. \n",
+    "mainly, functions, loops, classes, dictionaries, tuples, zips, lambda, \n",
+    "list comprehension, conditionals/if-elif, numpy, various library usages \n",
+    "(math, matplotlib), collections defaultdict\n",
+    "\"\"\"\n",
+    "\n",
     "\n",
     "class Strategies(object):\n",
     "    \"\"\"\n",
@@ -27,9 +35,11 @@
     "    \"\"\"\n",
     "    def __init__(self,x1):\n",
     "        \"\"\"\n",
-    "        this will count() method will take in x1 which was the csv file given in week8 (not the new one)\n",
+    "        this will count() method will take in x1 which was the csv file given in week8 \n",
+    "        (not the new one)\n",
     "        is has to parse the following series columns in order to project sales vs year\n",
-    "        Rank\tName\tPlatform\tYear\tGenre\tPublisher\tNA_Sales\tEU_Sales\tJP_Sales\tOther_Sales\tGlobal_Sales\n",
+    "        Rank\tName\tPlatform\tYear\tGenre\tPublisher\tNA_Sales\tEU_Sales\t\n",
+    "        JP_Sales\tOther_Sales\tGlobal_Sales\n",
     "        \"\"\"\n",
     "        assert isinstance(x1, pd.core.frame.DataFrame)\n",
     "        assert 'Year' in x1\n",
@@ -73,8 +83,9 @@
     "        \"\"\"\n",
     "        y axis = revenue in $usd millions\n",
     "        x axis = number of games sold\n",
-    "        this function will take that same csv file and plot total revenue vs. number of games sold per company\n",
-    "        the blue dots represent the other comapnies that are part of the lower half of the outliers\n",
+    "        this function will take that same csv file and plot total revenue vs. number of \n",
+    "        games sold per company the blue dots represent the other comapnies that are \n",
+    "        part of the lower half of the outliers\n",
     "        \"\"\"\n",
     "        publishers = x1.Publisher.unique()\n",
     "\n",
@@ -119,8 +130,9 @@
     "        \"\"\"\n",
     "        y axis = Revenue\n",
     "        x axis = number of games sold\n",
-    "        this function will take that same csv file and plot total revenue vs. number of games sold per company\n",
-    "        however, we also want all the dots, such that ea dot represents the number of games sold that year\n",
+    "        this function will take that same csv file and plot total revenue vs. number \n",
+    "        of games sold per company however, we also want all the dots, \n",
+    "        such that ea dot represents the number of games sold that year\n",
     "        \"\"\"\n",
     "        publishers = x1.Publisher.unique()\n",
     "\n",
